# learning_to_localize_leakage

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
bash_scripts/: htune_ascadv1f.sh  htune_ascadv1f_greybox.sh  htune_ascadv2.sh  htune_chesctf2018.sh  optuna_ascadv1f_arch_tune.sh  optuna_ascadv1v_arch_tune.sh  optuna_chesctf2018_arch_tune.sh  run_best_ascadv1f.sh  run_snr_experiments.sh  sync_results.sh  train_ascadv1_fixed.sh  train_ascadv1_fixed_arch_lr_sweep_slurm.sh  train_ascadv1_fixed_rope_lr_seed_sweep_slurm.sh  train_ascadv1_fixed_slurm.sh  train_ascadv1_fixed_transformer_reg_sweep_slurm.sh  train_ascadv1_fixed_transformer_slurm.sh
config/: aes_hd.yaml  ascadv1_fixed.yaml  ascadv1_fixed_greybox.yaml  ascadv1_variable.yaml  ascadv2.yaml  ches_ctf_2018.yaml  dpav4.yaml  dpav4_2.yaml  global_variables.yaml  nucleo.yaml  otiait.yaml  otp.yaml
experiments/: _tmp_plot_oracle_agreement.py  _tmp_profile_ta.py  _tmp_reg_sweep_analysis.py  analyze_raw_trace_results.py  classifier_analysis.py  compute_snr.py  evaluate_leakiness_estimates.py  granular_ascadv1_qualitative_plots.py  init_things.py  plot_regularization_sweeps.py  plot_results.py  pyproject.toml  run_all_on_ascadv1_raw.py  run_all_on_ascadv1_var_raw.py  run_all_on_nucleo.py  run_real_trials.py  run_synthetic_hw_trials.py  run_toy_gaussian_trials.py  run_trials.py  sync_results.sh  train_supervised_model.py
experiments/final_evaluation/: evaluate_localization.py
experiments/init_things/: __init__.py  directories.py  mpl_constants.py
experiments/initialization/: __init__.py  directories.py
experiments/local_config/: ascadv1_fixed.yaml  ascadv1_fixed_greybox.yaml  ascadv1_fixed_transformer.yaml  ascadv1_variable.yaml  ascadv1_variable_greybox.yaml  ascadv1_variable_transformer.yaml  ascadv2.yaml  ches_ctf_2018.yaml  ches_ctf_2018_transformer.yaml  directories.template.yaml  directories.yaml  dpav4_2.yaml  dpav4d2.yaml
experiments/runs/: compute_snr.py
experiments/snr/: compute.py  entrypoint.py  visualize.py
experiments/tests/: test_dataset_iteration_speed.py  test_dataset_traversal_speed.py
experiments/train/: entrypoint.py  evaluation.py  hyperparameter_tuning.py  supervised.py  supervised_run.py
experiments/utils/: load_data.py  training_config.py
new_experiments/: compute_snr.py
slurm_scripts/: htune_ascadv1f.sh  htune_ascadv1f_greybox.sh  htune_ascadv1v.sh  htune_ascadv2.sh  htune_chesctf2018.sh  htune_dpav4d2.sh  lr_sweep_ascadv2.sh  reg_sweep_ascadv1f.sh  reg_sweep_ascadv1v.sh  reg_sweep_chesctf2018.sh
src/: common.py  multi_trial_run.sh  run_trials.py  self_contained_example.ipynb
src/datasets/: __init__.py  (+3 more)
(+145 files in other folders)
