[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leakage-localization-experiments"
version = "2026.0"
dependencies = [
    "leakage-localization"
]
requires-python = "==3.11.*"
authors = [
    {name = "Jim Gammell", email = "jgammell.purdue@gmail.com"}
]
description = "Experiments for leakage localization."

[tool.setuptools.packages.find]
where = ["."]
include = ["experiments*"]
